--- a/Funeral de la media naranja/Funeral de la media naranja/Info.plist
+++ b/Funeral de la media naranja/Funeral de la media naranja/Info.plist
@@ -31,9 +31,7 @@
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
+	<array/>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
